[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "simple-smartsheet"
version = "0.5.0"
description = "Python library to interact with Smartsheet API"
authors = ["Dmitry Figol <git@dmfigol.me>"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/dmfigol/simple-smartsheet"
repository = "https://github.com/dmfigol/simple-smartsheet"

keywords = ["smartsheet"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = ">=3.6.1"
marshmallow = "^3"
requests = "*"
attrs = "*"
cattrs = "*"
mypy-extensions = "*"
aiohttp = "*"
pandas = { version = ">=1", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"
black = { version = "*", allow-prereleases = true }
isort = "*"
pytest = "*"
pytest-asyncio = "*"
bpython = "*"
pdbpp = "*"
vcrpy = "*"
pytest-recording = "*"
"ruamel.yaml" = "*"
pytest-pycharm = "*"

[tool.poetry.extras]
pandas = ["pandas"]